Added basic read page (not populated with db data)

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "howler": "^2.2.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.474.0",
     "next": "^14.2.5",
     "nodemailer": "^6.9.16",
     "react": "^18",
