--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "next": "^14.2.5",
+    "next-themes": "^0.4.4",
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
