--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
+    "express-rate-limit": "^7.5.0",
     "geist": "^1.3.1",
     "howler": "^2.2.4",
     "jsonwebtoken": "^9.0.2",
