--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/typography": "^0.5.16",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "express-rate-limit": "^7.5.0",
     "geist": "^1.3.1",
     "howler": "^2.2.4",
